--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@tighten/react-native-time-input": "^1.0.3",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "expo": "~49.0.15",
+    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-date-picker": "^4.3.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-swipeable": "^0.6.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
