--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-navigation/drawer": "^6.6.11",
+    "@react-navigation/native": "^6.1.14",
     "@tighten/react-native-time-input": "^1.0.3",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "date-fns": "^3.3.1",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.8.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-icons": "^5.0.1",
+    "react-native": "0.72.10",
     "react-native-date-picker": "^4.3.5",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-swipeable": "^0.6.0",
+    "react-native-vector-icons": "^10.0.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
